# autolibra

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  PROCESSING_STEPS.md  README.md  balrog_notes.txt  feedback_grounding_results.jsonl  feedback_grounding_results_0.jsonl  feedback_grounding_results_1.jsonl  feedback_grounding_results_1_diff.jsonl  feedback_grounding_results_1_old.jsonl  feedback_grounding_results_2.jsonl  feedback_grounding_results_2_mod2.jsonl  feedback_grounding_results_2_mod3.jsonl  feedback_grounding_results_3.jsonl  feedback_grounding_results_3_old.jsonl  llm_eval_results.jsonl  llm_eval_results_0.jsonl  llm_eval_results_1.jsonl  llm_eval_results_1_diff.jsonl  llm_eval_results_1_newmetrics.jsonl  llm_eval_results_1_nm.jsonl  llm_eval_results_1_same.jsonl  llm_eval_results_2.jsonl  llm_eval_results_2_mod1.jsonl  llm_eval_results_2_mod2.jsonl  llm_eval_results_2_mod3.jsonl  llm_eval_results_3.jsonl  llm_eval_results_3_old.jsonl  package-lock.json  package.json  positive_aspects_traits.pkl  pyproject.toml  railway.json  tailwind.config.js  z.txt  z_score_frequency.py
inspicio/: find_files.py  generate_task_descriptions.py  import_lfs_to_db.py  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  update_file_paths.py  vite.config.ts
inspicio_backend/: migrate_annotations.py  migrate_labels.py  run_unified_migration.py  server.py  test_annotation_db.py  unified_migration.py  webvoyager_migration.py
minihack_trajectories/: 20241030_naive-Llama-3.2-1B-Instruct_MiniHack-Boxoban-Hard-v0_MiniHack-Boxoban-Hard-v0_run_00.csv  20241030_naive-Llama-3.2-1B-Instruct_MiniHack-Boxoban-Hard-v0_MiniHack-Boxoban-Hard-v0_run_01.csv  20241030_naive-Llama-3.2-1B-Instruct_MiniHack-Boxoban-Hard-v0_MiniHack-Boxoban-Hard-v0_run_02.csv  20241030_naive-Llama-3.2-1B-Instruct_MiniHack-Boxoban-Hard-v0_MiniHack-Boxoban-Hard-v0_run_03.csv  20241030_naive-Llama-3.2-1B-Instruct_MiniHack-Boxoban-Hard-v0_MiniHack-Boxoban-Hard-v0_run_04.csv  20241030_naive-Llama-3.2-1B-Instruct_MiniHack-Boxoban-Medium-v0_MiniHack-Boxoban-Medium-v0_run_00.csv  20241030_naive-Llama-3.2-1B-Instruct_MiniHack-Boxoban-Medium-v0_MiniHack-Boxoban-Medium-v0_run_01.csv  20241030_naive-Llama-3.2-1B-Instruct_MiniHack-Boxoban-Medium-v0_MiniHack-Boxoban-Medium-v0_run_02.csv  20241030_naive-Llama-3.2-1B-Instruct_MiniHack-Boxoban-Medium-v0_MiniHack-Boxoban-Medium-v0_run_03.csv  20241030_naive-Llama-3.2-1B-Instruct_MiniHack-Boxoban-Medium-v0_MiniHack-Boxoban-Medium-v0_run_04.csv  (+318 more)
notebooks/: imp.py  webarena.ipynb
prompt_optimization/: .gitignore  config.yaml
(+72 files in other folders)
