[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osw-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "osw-eval-core[webarena,sotopia]",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
    "streamlit"
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[tool.uv.sources]
osw-eval-core = { workspace = true }
osw-data = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs"

[tool.hatch.build.targets.wheel]
packages = ["src/osw_data"]
