[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autolibra-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "autolibra-eval-core[webarena,sotopia]",
    "pydantic-settings>=2.7.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
    "streamlit>=1.43",
    "pandas>=2.2",
    "logfire>=3.7.1",
    "matplotlib>=3.10.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pandas-stubs>=2.2",
]

[project.optional-dependencies]
notebook = ["marimo>=0.10"]

[tool.uv.sources]
autolibra-eval-core = { workspace = true }
autolibra-data = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs"

[tool.hatch.build.targets.wheel]
packages = ["src/autolibra_data"]

[tool.pylsp-mypy]
enabled = true
